update .eslintrc.json for production build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,13 @@
       "rules": {
         "react-hooks/exhaustive-deps": "off"
       }
+    },
+    {
+      "files": ["./components/reviews/ReviewCard.tsx"],
+      "rules": {
+        "@next/next/no-img-element": "off",
+        "jsx-a11y/alt-text": "off"
+      }
     }
   ]
 }
